--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="center-box-rightchild">
                 <div class="background-cover"></div>
-                <img src="../Image/img1.png" class="home-img">
+                <img src="./Image/img1.png" class="home-img">
             </div>
         </div>
     </div>
@@ -118,7 +118,7 @@
         <div class="project-holder">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/Image/profile page.png" alt="Project 1">
+                    <img src="./Image/profile page.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <div class="project-title">Twitter-clone</div>
@@ -128,7 +128,7 @@
             
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/Image/squid games 2.png" alt="Project 1">
+                    <img src="./Image/squid games 2.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <div class="project-title">Squid Games</div>
@@ -138,7 +138,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/Image/zhan.png" alt="Project 1">
+                    <img src="./Image/zhan.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <div class="project-title">Zhanjaiji</div>
@@ -148,7 +148,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/Image/insta.png" alt="Project 1">
+                    <img src="./Image/insta.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <div class="project-title">Instagram-Clone</div>
@@ -158,7 +158,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/Image/cara.png" alt="Project 1">
+                    <img src="./Image/cara.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <div class="project-title">ECommerce</div>
@@ -168,7 +168,7 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/Image/simon.png" alt="Project 1">
+                    <img src="./Image/simon.png" alt="Project 1">
                 </div>
                 <div class="project-details">
                     <div class="project-title">Simon Game</div>
